fix: stretch settings bar

--- a/src/components/Settings/style.css
+++ b/src/components/Settings/style.css
@@ -66,3 +66,9 @@
         }
     }
 }
+
+@media (min-width: 100rem) {
+    .settings {
+        align-self: stretch;
+    }
+}
